[gd_scene load_steps=2 format=3 uid="uid://cndlh7i1ac7qy"]

[ext_resource type="Script" uid="uid://bpwyvb7vyg8mq" path="res://NewUI/PlayerUnitUI/unit_stats_container.gd" id="1_ao1fu"]

[node name="UnitStatsContainer" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ao1fu")

[node name="UnitNameLabel" type="Label" parent="."]
layout_mode = 2
text = "Mech"

[node name="UnitProgressBarContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitArmorBar" type="ProgressBar" parent="UnitProgressBarContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitHealthBar" type="ProgressBar" parent="UnitProgressBarContainer"]
layout_mode = 2
size_flags_horizontal = 3
